--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,3 +6,107 @@ body, html {
     background-repeat: no-repeat;
     background-size: cover;
   }
+
+  .mainBox {
+    max-width: 960px;
+    margin: 0 auto;
+    margin-top: 50px;
+  }
+  
+  .hidden {
+    visibility: hidden;
+  }
+  
+  .img-initial {
+    background: url('../images/jim.jpg') no-repeat center top;
+    background-size: 100%;
+    height: 520px;
+    color: rgb(19, 113, 255);
+
+  }
+  
+  #start{
+    font-size: 36px;
+    padding: 10px;
+    text-align: center;
+    margin: 0 auto;
+    cursor: pointer;
+  }
+  
+  .timer,
+  .score {
+    margin-bottom: 30px;
+    color: #fed501;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .score {
+    text-align: right;
+  }
+  
+  .time {
+    color: #00dbf8;
+    font-size: 30px;
+  }
+  
+  .question {
+    color: white;
+    font-size: 27px;
+    margin-bottom: 50px;
+    text-align: center;
+  }
+  
+  .answer {
+    padding: 20px;
+    color: #06075f;
+    width: 80%;
+    margin: 0 auto;
+    margin-bottom: 20px;
+    background-color: white;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+ 
+  
+  .row {
+    margin: 0 auto;
+  }
+  
+  .right-answer {
+    background: green;
+    color: white;
+  }
+  
+  .wrong-answer {
+    background: #f80029;
+    color: white;
+  }
+  
+  .times-up {
+    font-size: 36px;
+    color: #ff002b;
+    text-align: center;
+  }
+  
+  .final {
+    color: white;
+    font-size: 30px;
+    text-align: center;
+    margin-top: 100px;
+  }
+  
+  .reset-button {
+    background: #3b470f;
+    color: white;
+    border: none;
+    margin-top: 80px;
+    border-radius: 40px;
+    width: 300px;
+  }
+  
+  .reset-button:hover {
+    background: #fed501;
+    border: none;
+  }
