--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,8 +21,8 @@ body {
     background: url('../images/jim.jpg') no-repeat center top;
     background-size: 100%;
     height: 520px;
-    color: rgb(19, 113, 255);
-
+    color: rgb(252, 252, 252);
+    text-shadow: 3px 3px #3b470f;
   }
   
   #start{
@@ -30,7 +30,7 @@ body {
     padding: 10px;
     text-align: center;
     margin: 0 auto;
-    cursor: pointer;
+    cursor: crosshair;
   }
   
   .timer,
